2005-01-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/module.c: Rework /proc interface. Provide
	/proc/rtai/latency to dynamically read/update the scheduling
	latency value. Scatter old interface sections from rtai/rthal and
	rtai/system to per-topic individual entries.

	* nucleus/pod.c (xnpod_set_thread_periodic): Passing XN_INFINITE
	as the period just stops any undergoing timing.

	* nucleus/lib/fusion.c (pthread_ticks2ns_t, pthread_ns2ticks_rt):
	Discard useless and confusing routines using nanoseconds as
	input/output values in oneshot mode.

	* skins/rtai/intr.c: Add interrupt management API.

	* include/nucleus/asm-*/system.h (xnarch_isr_*): Remove
	redundant calls.

	* include/nucleus/asm-*/system.h (xnarch_hook_irq): Do not enable
	upon attachment.

	* include/nucleus/asm-*/system.h: Get rid of unused
	xnarch_sleep_on().

2005-01-02  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.8

2005-01-02  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/system.h (xnarch_sysalloc): Temporarily
	disable the use of vmalloc() for large chunks. We've (likely) got
	some on-demand mapping problem when running over the non-Linux
	domain.

	* include/nucleus/asm-*/calibration.h: Add per-arch calibration
	data.

2005-01-01  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Upgrade to Adeos 2.6.8rc3-r6c10.

	* nucleus/heap.c (xnheap_mmap): Fix PPC support.

2004-12-31  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* testsuite/klatency/latency.c (main): make the output line
	buffered.

2004-12-30  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/syscall.h (__xn_rdtsc): Fix case with
	strict aliasing rules.

	* include/nucleus/asm-ppc/system.h (xnarch_send_timer_ipi):
	Provide for an empty definition in UP mode.

	* arch/ppc/hal/hal.c (rthal_release_irq): Fix call to
	adeos_virtualize_irq_from().

2004-12-29  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
